# huggingface-ghcr

./: .gitignore  LICENSE  Makefile  README.md  config.json  index.html  pyproject.toml  requirements.txt
src/: app.py  logging_config.py
src/models/: schemas.py
src/routes/: translate.py
src/services/: config_loader.py  sanitizer.py  translator.py
tests/: test_integration.py  test_unit.py
