[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggingface-ghcr"
version = "0.1.0"
authors = [{name = "Martin Diergardt", email = "martin.diergardt.2@gmail.com" }]
license = {text = "MIT"}
description = "A multilingual FastAPI translation app using Hugging Face models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "transformers>=4.44.0",
    "sentencepiece>=0.2.0",
    "torch>=2.2.0",
    "sacremoses>=0.0.53",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "typing-extensions>=4.12.0"
]

# --- Optional development dependencies ---
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff<=0.5.0",
    "black>=24.4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -vv"
testpaths = ["tests"]
filterwarnings = [
    # Ignore known harmless SWIG deprecation warnings from third-party libs
    "ignore:.*SwigPyObject.*:DeprecationWarning",
    "ignore:.*SwigPyPacked.*:DeprecationWarning"
]